<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <Button
        android:id="@+id/btnOpenContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1ea2e1"       
        android:textColor="#fff"
        android:text="@string/open_contact" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:ems="10" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="" />
    
    <Button
        android:id="@+id/btnGetLatLng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1ea2e1"       
        android:textColor="#fff"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/txtLatLng"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="" />

    <Button
        android:id="@+id/btnViewMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1ea2e1"       
        android:textColor="#fff"
        android:text="@string/view_map" android:layout_marginTop="10dp"/>


</LinearLayout>
