<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/btnGetLatLng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/txtLatLng"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="" />

    <Button
        android:id="@+id/btnViewMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_map" android:layout_marginTop="10dp"/>

</LinearLayout>
